--- a/DemoPages/DemoPages.csproj
+++ b/DemoPages/DemoPages.csproj
@@ -10,8 +10,14 @@
   <ItemGroup>
     <Compile Remove="Detalle.cs" />
     <Compile Remove="MyPage.xaml.cs" />
+    <Compile Remove="NavegationPage.xaml.cs" />
+    <Compile Remove="DemoNavegationPge.xaml.cs" />
+    <Compile Remove="DemoNavegationPage.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="MyPage.xaml" />
+    <EmbeddedResource Remove="NavegationPage.xaml" />
+    <EmbeddedResource Remove="DemoNavegationPge.xaml" />
+    <EmbeddedResource Remove="DemoNavegationPage.xaml" />
   </ItemGroup>
 </Project>
