--- a/DemoPages/DemoPages.csproj
+++ b/DemoPages/DemoPages.csproj
@@ -14,6 +14,7 @@
     <Compile Remove="DemoNavegationPge.xaml.cs" />
     <Compile Remove="DemoNavegationPage.xaml.cs" />
     <Compile Remove="DemoCarouselPage.cs" />
+    <Compile Remove="CarouselClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Remove="MyPage.xaml" />
