--- a/DemoPages.iOS/DemoPages.iOS.csproj
+++ b/DemoPages.iOS/DemoPages.iOS.csproj
@@ -161,5 +161,9 @@
     <BundleResource Include="Resources\3.png" />
     <BundleResource Include="Resources\2.png" />
     <BundleResource Include="Resources\1.png" />
+    <BundleResource Include="Resources\alerta.png" />
+    <BundleResource Include="Resources\listado.png" />
+    <BundleResource Include="Resources\contactos.png" />
+    <BundleResource Include="Resources\pizza.png" />
   </ItemGroup>
 </Project>
